--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                 traceK: 0.4,
                 timeDelta: 0.01
             };
-
+<body> 
+    <h2 id="tittle"> I LOVE Thanh Thao </h2>
             var time = 0;
             var loop = function () {
                 var n = -Math.cos(time);
